--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Flask-Login==0.4.1
 Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2>=2.10.1
 Mako==1.0.7
 MarkupSafe==1.1.1
 pbr==5.1.3
