--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,34 @@
+alembic==0.9.9
 argh==0.26.2
+blinker==1.4
+certifi==2019.6.16
+chardet==3.0.4
 Click==7.0
 dominate==2.3.5
 eventlet==0.17.4
 Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
+Flask-Dance==0.14.0
+Flask-DebugToolbar==0.10.1
 Flask-Login==0.4.1
+Flask-Migrate==2.1.1
+Flask-OAuth==0.12
+Flask-OAuthlib==0.9.4
 Flask-SocketIO==4.2.1
+Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 greenlet==0.4.15
 gunicorn==18.0
+httplib2==0.11.3
+idna==2.6
 itsdangerous==1.1.0
 Jinja2==2.10.1
+lazy==1.3
 Mako==1.0.7
 MarkupSafe==1.1.1
+oauth2==1.9.0.post1
+oauthlib==2.0.7
 pathtools==0.1.2
 pbr==5.1.3
 python-dateutil==1.5
@@ -22,12 +37,19 @@ python-engineio==3.10.0
 python-socketio==4.3.1
 pytz==2013.7
 PyYAML==5.1.2
+requests==2.18.4
+requests-oauthlib==0.8.0
 six==1.12.0
+SQLAlchemy==1.2.6
+SQLAlchemy-Utils==0.33.2
 stevedore==1.30.1
+urllib3==1.22
+URLObject==2.4.3
 virtualenv==16.4.3
 virtualenv-clone==0.5.1
 virtualenvwrapper==4.8.4
 visitor==0.1.3
 watchdog==0.9.0
 Werkzeug==0.14.1
+wincertstore==0.2
 WTForms==2.2.1
