Update all requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,58 @@
-alembic==0.9.9
+alembic==1.3.1
 argh==0.26.2
 blinker==1.4
-certifi==2019.6.16
+certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
-dominate==2.3.5
-eventlet==0.17.4
-Flask==1.0.2
+dnspython==1.16.0
+dominate==2.4.0
+enum34==1.1.6
+eventlet==0.25.1
+Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
-Flask-Dance==0.14.0
+Flask-Dance==3.0.0
 Flask-DebugToolbar==0.10.1
 Flask-Login==0.4.1
-Flask-Migrate==2.1.1
+Flask-Migrate==2.5.2
 Flask-OAuth==0.12
-Flask-OAuthlib==0.9.4
+Flask-OAuthlib==0.9.5
 Flask-SocketIO==4.2.1
-Flask-SQLAlchemy==2.3.2
+Flask-SQLAlchemy==2.4.1
 Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 greenlet==0.4.15
-gunicorn==18.0
-httplib2==0.11.3
-idna==2.6
+gunicorn==19.9.0
+httplib2==0.14.0
+idna==2.8
 itsdangerous==1.1.0
-Jinja2==2.10.1
-lazy==1.3
-Mako==1.0.7
+Jinja2==2.10.3
+lazy==1.4
+Mako==1.1.0
 MarkupSafe==1.1.1
+monotonic==1.5
 oauth2==1.9.0.post1
-oauthlib==2.0.7
+oauthlib==3.1.0
 pathtools==0.1.2
-pbr==5.1.3
-python-dateutil==1.5
+pbr==5.4.3
+python-dateutil==2.8.1
 python-editor==1.0.4
 python-engineio==3.10.0
 python-socketio==4.3.1
-pytz==2013.7
+pytz==2019.3
 PyYAML==5.1.2
-requests==2.18.4
-requests-oauthlib==0.8.0
-six==1.12.0
-SQLAlchemy==1.2.6
-SQLAlchemy-Utils==0.33.2
-stevedore==1.30.1
-urllib3==1.22
+requests==2.22.0
+requests-oauthlib==1.3.0
+six==1.13.0
+SQLAlchemy==1.3.11
+SQLAlchemy-Utils==0.35.0
+stevedore==1.31.0
+urllib3==1.25.7
 URLObject==2.4.3
-virtualenv==16.4.3
-virtualenv-clone==0.5.1
+virtualenv==16.7.7
+virtualenv-clone==0.5.3
 virtualenvwrapper==4.8.4
 visitor==0.1.3
 watchdog==0.9.0
-Werkzeug==0.14.1
+Werkzeug==0.16.0
 wincertstore==0.2
 WTForms==2.2.1
